# cogs-archive

./: CONTRIBUTING.md  README.md  license.md  pyproject.toml
cogs_archive/: __init__.py  cache.py  config.py  dataset.py  exceptions.py  publish.py  registry.py  zenodo.py
docs/: depositing.md
tests/: test_publish_unit.py
